--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 django = "^4.1.3"
 djangorestframework = "^3.14.0"
 python-dotenv = "^0.21.0"
+django-jazzmin = "^2.6.0"
 
 
 [build-system]
