--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django = "^4.1.3"
 djangorestframework = "^3.14.0"
 python-dotenv = "^0.21.0"
 django-jazzmin = "^2.6.0"
+flake8 = "^5.0.4"
 
 
 [build-system]
