--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,53 +1,47 @@
-name: Django CI
+name: Django Tests
 
 on:
+  workflow_call:
+  workflow_dispatch:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
 
-env:
-  SECRET_KEY: ${{ secrets.SECRET_KEY }}
-  DEBUG: ${{ secrets.DEBUG }}
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository
+      - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up python
-        id: setup-python
+      - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          python-version: "3.10.7"
+          python-version: 3.10.7
 
-      - name: Install and configure Poetry
-        uses: snok/install-poetry@v1
+      - name: Install Poetry
+        uses: dschep/install-poetry-action@v1.2
+
+      - name: Cache Poetry virtualenv
+        uses: actions/cache@v2
+        id: cache
         with:
-          version: 1.1.13
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-            - name: Set up cache
-              uses: actions/cache@v2
-              id: cached-poetry-dependencies
-              with:
-                path: .venv
-                key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
-            - name: Install dependencies
-              run: poetry install
-              if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+          path: ~/.virtualenvs
+          key: poetry-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: |
+                poetry-${{ hashFiles('**/poetry.lock') }}
 
-      - name: Write .env
-        uses: CallePuzzle/envvar-to-dotenv-action@0.1.0
-        env:
-          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
-        with:
-          variableNames: SECRET_KEY,DEBUG
-          envPath: '.env'
-
-      - name: Run tests
+      - name: Set Poetry Config
         run: |
-          source .venv/bin/activate
-          python manage.py test
+          poetry config settings.virtualenvs.in-project false
+          poetry config settings.virtualenvs.path ~/.virtualenvs
+
+      - name: Install Dependencies
+        run: poetry install
+        if: steps.cache.outputs.cache-hit != 'true'
+
+      - name: Run Tests
+        run: python manage.py test --noinput
+
