--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -14,9 +14,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10.7"]
-        poetry-version: ["1.1.13"]
-        os: [ubuntu-18.04, macos-latest, windows-latest]
+        python-version: [ "3.10.7" ]
+        poetry-version: [ "1.1.13" ]
+        os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
