--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -68,4 +68,4 @@ jobs:
       - name: Run tests
         run: |
           source .venv/bin/activate
-          python manage.py test
+          python manage.py test --noinput
