--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ djangorestframework = "^3.14.0"
 python-dotenv = "^0.21.0"
 django-jazzmin = "^2.6.0"
 flake8 = "^5.0.4"
-drf-yasg = "1.20.0"
+drf-yasg = "^1.21.4"
 
 
 [build-system]
