--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-dotenv = "^0.21.0"
 django-jazzmin = "^2.6.0"
 flake8 = "^5.0.4"
 drf-yasg = "^1.21.4"
+black = "^22.10.0"
 
 
 [build-system]
