--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ drf-yasg = "^1.21.4"
 black = "^22.10.0"
 pre-commit = "^2.20.0"
 djangorestframework-simplejwt = "^5.2.2"
+psycopg2 = "^2.9.5"
+psycopg2-binary = "^2.9.5"
 
 [tool.black]
 line-length = 120
