--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -12,6 +12,11 @@ on:
 env:
   SECRET_KEY: ${{ secrets.SECRET_KEY }}
   DEBUG: ${{ secrets.DEBUG }}
+  DB_NAME: ${{ secrets.DB_NAME }}
+  DB_USER: ${{ secrets.DB_USER }}
+  DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+  DB_HOST: ${{ secrets.DB_HOST }}
+  DB_PORT: ${{ secrets.DB_PORT }}
 
 jobs:
   test:
@@ -61,7 +66,7 @@ jobs:
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
         with:
-          variableNames: SECRET_KEY,DEBUG
+          variableNames: SECRET_KEY,DEBUG,DB_NAME,DB_USER,DB_PASSWORD,DB_HOST,DB_PORT
           envPath: '.env'
       #----------------------------------------------
       #              run test suite
