--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -4,10 +4,13 @@ on:
   workflow_call:
   workflow_dispatch:
   push:
-    branches: [ main ]
-
+    branches:
+      - master
+      - development
   pull_request:
-    branches: [ main ]
+    branches:
+      - master
+      - development
 
 env:
   SECRET_KEY: ${{ secrets.SECRET_KEY }}
