--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -77,4 +77,5 @@ jobs:
       - name: Run tests
         run: |
           source .venv/bin/activate
+          python manage.py migrate
           python manage.py test --noinput
