--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pre-commit = "^2.20.0"
 djangorestframework-simplejwt = "^5.2.2"
 psycopg2 = "^2.9.5"
 psycopg2-binary = "^2.9.5"
+django-filter = "^22.1"
 
 [tool.black]
 line-length = 120
@@ -33,6 +34,7 @@ exclude = [
     "**/tests/*",
     "**/migrations/*",
     "users/models.py",
+    "expenses/views.py"
 ]
 
 [build-system]
