--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -83,4 +83,4 @@ jobs:
       - name: Run tests
         run: |
           source .venv/bin/activate
-          python manage.py test --noinput
+          coverage erase && coverage run manage.py test && coverage report
