--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,10 @@ psycopg2-binary = "^2.9.5"
 django-filter = "^22.1"
 faker = "^15.3.4"
 coverage = "^6.5.0"
+celery = "^5.2.7"
+redis = "^4.4.0"
+django-celery-beat = "^2.4.0"
+django-celery-results = "^2.4.0"
 
 [tool.black]
 line-length = 120
