--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ celery = "^5.2.7"
 redis = "^4.4.0"
 django-celery-beat = "^2.4.0"
 django-celery-results = "^2.4.0"
+django-postgres-extra = "^2.0.6"
 
 [tool.black]
 line-length = 120
