--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,9 @@
 [tool.poetry]
 name = "financial-accounting"
 version = "0.1.0"
-description = "App for managing your expenses and debts!"
+description = "An app where you can manage your finances!"
 authors = ["artemkka <artiom.preatca@ebs-integrator.com>"]
 readme = "README.md"
-packages = [{include = "financial_accounting"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -17,8 +16,6 @@ drf-yasg = "^1.21.4"
 black = "^22.10.0"
 pre-commit = "^2.20.0"
 djangorestframework-simplejwt = "^5.2.2"
-psycopg2 = "^2.9.5"
-psycopg2-binary = "^2.9.5"
 django-filter = "^22.1"
 faker = "^15.3.4"
 coverage = "^6.5.0"
@@ -27,6 +24,9 @@ redis = "^4.4.0"
 django-celery-beat = "^2.4.0"
 django-celery-results = "^2.4.0"
 django-postgres-extra = "^2.0.6"
+psycopg2-binary = "^2.9.5"
+gunicorn = "^20.1.0"
+flower = "^1.2.0"
 
 [tool.black]
 line-length = 120
@@ -48,5 +48,5 @@ exclude = [
 ]
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry>=1.3.1"]
 build-backend = "poetry.core.masonry.api"
