--- a/.github/workflows/run_linters.yml
+++ b/.github/workflows/run_linters.yml
@@ -5,7 +5,7 @@ on: [ pull_request ]
 jobs:
   flake8-lint:
     runs-on: ubuntu-latest
-    name: Checks
+    name: flake8 Lint
     steps:
       - name : Checkout
         uses : actions/checkout@v2
