--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ django-postgres-extra = "^2.0.6"
 psycopg2-binary = "^2.9.5"
 gunicorn = "^20.1.0"
 flower = "^1.2.0"
+sentry-sdk = "^1.12.1"
+django-debug-toolbar = "^3.8.1"
 
 [tool.black]
 line-length = 120
