--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ gunicorn = "^20.1.0"
 flower = "^1.2.0"
 sentry-sdk = "^1.12.1"
 django-debug-toolbar = "^3.8.1"
+graphene-django = "^3.0.0"
 
 [tool.black]
 line-length = 120
